compiler/mesh-parser/tests/snapshots/parser_tests__fn_def_no_params.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn hello() do\\n  \\\"world\\\"\\nend\")"
---
SOURCE_FILE@0..27
  FN_DEF@0..27
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..8
      IDENT@3..8 "hello"
    PARAM_LIST@8..10
      L_PAREN@8..9 "("
      R_PAREN@9..10 ")"
    WHITESPACE@10..11 " "
    DO_KW@11..13 "do"
    BLOCK@13..24
      NEWLINE@13..14 "\n"
      WHITESPACE@14..16 "  "
      STRING_EXPR@16..23
        STRING_START@16..17 "\""
        STRING_CONTENT@17..22 "world"
        STRING_END@22..23 "\""
      NEWLINE@23..24 "\n"
    END_KW@24..27 "end"
  EOF@27..27 ""
