compiler/mesh-parser/tests/snapshots/parser_tests__fn_def_pub.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"pub fn add(x, y) do\\n  x + y\\nend\")"
---
SOURCE_FILE@0..31
  FN_DEF@0..31
    VISIBILITY@0..3
      PUB_KW@0..3 "pub"
    WHITESPACE@3..4 " "
    FN_KW@4..6 "fn"
    WHITESPACE@6..7 " "
    NAME@7..10
      IDENT@7..10 "add"
    PARAM_LIST@10..16
      L_PAREN@10..11 "("
      PARAM@11..12
        IDENT@11..12 "x"
      COMMA@12..13 ","
      WHITESPACE@13..14 " "
      PARAM@14..15
        IDENT@14..15 "y"
      R_PAREN@15..16 ")"
    WHITESPACE@16..17 " "
    DO_KW@17..19 "do"
    BLOCK@19..28
      NEWLINE@19..20 "\n"
      WHITESPACE@20..22 "  "
      BINARY_EXPR@22..27
        NAME_REF@22..23
          IDENT@22..23 "x"
        WHITESPACE@23..24 " "
        PLUS@24..25 "+"
        WHITESPACE@25..26 " "
        NAME_REF@26..27
          IDENT@26..27 "y"
      NEWLINE@27..28 "\n"
    END_KW@28..31 "end"
  EOF@31..31 ""
