compiler/mesh-parser/tests/snapshots/parser_tests__fn_def_simple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn greet(name) do\\n  \\\"hello\\\"\\nend\")"
---
SOURCE_FILE@0..31
  FN_DEF@0..31
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..8
      IDENT@3..8 "greet"
    PARAM_LIST@8..14
      L_PAREN@8..9 "("
      PARAM@9..13
        IDENT@9..13 "name"
      R_PAREN@13..14 ")"
    WHITESPACE@14..15 " "
    DO_KW@15..17 "do"
    BLOCK@17..28
      NEWLINE@17..18 "\n"
      WHITESPACE@18..20 "  "
      STRING_EXPR@20..27
        STRING_START@20..21 "\""
        STRING_CONTENT@21..26 "hello"
        STRING_END@26..27 "\""
      NEWLINE@27..28 "\n"
    END_KW@28..31 "end"
  EOF@31..31 ""
