compiler/mesh-parser/tests/snapshots/parser_tests__fn_def_typed_params_and_return.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn typed(x :: Int, y :: Int) -> Int do\\n  x + y\\nend\")"
---
SOURCE_FILE@0..50
  FN_DEF@0..50
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..8
      IDENT@3..8 "typed"
    PARAM_LIST@8..28
      L_PAREN@8..9 "("
      PARAM@9..17
        IDENT@9..10 "x"
        WHITESPACE@10..11 " "
        TYPE_ANNOTATION@11..17
          COLON_COLON@11..13 "::"
          WHITESPACE@13..14 " "
          IDENT@14..17 "Int"
      COMMA@17..18 ","
      WHITESPACE@18..19 " "
      PARAM@19..27
        IDENT@19..20 "y"
        WHITESPACE@20..21 " "
        TYPE_ANNOTATION@21..27
          COLON_COLON@21..23 "::"
          WHITESPACE@23..24 " "
          IDENT@24..27 "Int"
      R_PAREN@27..28 ")"
    WHITESPACE@28..29 " "
    TYPE_ANNOTATION@29..35
      ARROW@29..31 "->"
      WHITESPACE@31..32 " "
      IDENT@32..35 "Int"
    WHITESPACE@35..36 " "
    DO_KW@36..38 "do"
    BLOCK@38..47
      NEWLINE@38..39 "\n"
      WHITESPACE@39..41 "  "
      BINARY_EXPR@41..46
        NAME_REF@41..42
          IDENT@41..42 "x"
        WHITESPACE@42..43 " "
        PLUS@43..44 "+"
        WHITESPACE@44..45 " "
        NAME_REF@45..46
          IDENT@45..46 "y"
      NEWLINE@46..47 "\n"
    END_KW@47..50 "end"
  EOF@50..50 ""
