compiler/mesh-parser/tests/snapshots/parser_tests__fn_expr_body_bool_pattern.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..19
  FN_DEF@0..19
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..9
      IDENT@3..9 "to_int"
    PARAM_LIST@9..15
      L_PAREN@9..10 "("
      PARAM@10..14
        LITERAL_PAT@10..14
          TRUE_KW@10..14 "true"
      R_PAREN@14..15 ")"
    WHITESPACE@15..16 " "
    EQ@16..17 "="
    WHITESPACE@17..18 " "
    FN_EXPR_BODY@18..19
      LITERAL@18..19
        INT_LITERAL@18..19 "1"
  EOF@19..19 ""
