compiler/mesh-parser/tests/snapshots/parser_tests__fn_expr_body_ident_param.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..35
  FN_DEF@0..35
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..6
      IDENT@3..6 "fib"
    PARAM_LIST@6..9
      L_PAREN@6..7 "("
      PARAM@7..8
        IDENT@7..8 "n"
      R_PAREN@8..9 ")"
    WHITESPACE@9..10 " "
    EQ@10..11 "="
    WHITESPACE@11..12 " "
    FN_EXPR_BODY@12..35
      BINARY_EXPR@12..35
        CALL_EXPR@12..22
          NAME_REF@12..15
            IDENT@12..15 "fib"
          ARG_LIST@15..22
            L_PAREN@15..16 "("
            BINARY_EXPR@16..21
              NAME_REF@16..17
                IDENT@16..17 "n"
              WHITESPACE@17..18 " "
              MINUS@18..19 "-"
              WHITESPACE@19..20 " "
              LITERAL@20..21
                INT_LITERAL@20..21 "1"
            R_PAREN@21..22 ")"
        WHITESPACE@22..23 " "
        PLUS@23..24 "+"
        WHITESPACE@24..25 " "
        CALL_EXPR@25..35
          NAME_REF@25..28
            IDENT@25..28 "fib"
          ARG_LIST@28..35
            L_PAREN@28..29 "("
            BINARY_EXPR@29..34
              NAME_REF@29..30
                IDENT@29..30 "n"
              WHITESPACE@30..31 " "
              MINUS@31..32 "-"
              WHITESPACE@32..33 " "
              LITERAL@33..34
                INT_LITERAL@33..34 "2"
            R_PAREN@34..35 ")"
  EOF@35..35 ""
