compiler/mesh-parser/tests/snapshots/parser_tests__fn_expr_body_literal_param.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..13
  FN_DEF@0..13
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..6
      IDENT@3..6 "fib"
    PARAM_LIST@6..9
      L_PAREN@6..7 "("
      PARAM@7..8
        LITERAL_PAT@7..8
          INT_LITERAL@7..8 "0"
      R_PAREN@8..9 ")"
    WHITESPACE@9..10 " "
    EQ@10..11 "="
    WHITESPACE@11..12 " "
    FN_EXPR_BODY@12..13
      LITERAL@12..13
        INT_LITERAL@12..13 "0"
  EOF@13..13 ""
