compiler/mesh-parser/tests/snapshots/parser_tests__fn_expr_body_multiple_params.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..16
  FN_DEF@0..16
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..6
      IDENT@3..6 "add"
    PARAM_LIST@6..12
      L_PAREN@6..7 "("
      PARAM@7..8
        LITERAL_PAT@7..8
          INT_LITERAL@7..8 "0"
      COMMA@8..9 ","
      WHITESPACE@9..10 " "
      PARAM@10..11
        IDENT@10..11 "y"
      R_PAREN@11..12 ")"
    WHITESPACE@12..13 " "
    EQ@13..14 "="
    WHITESPACE@14..15 " "
    FN_EXPR_BODY@15..16
      NAME_REF@15..16
        IDENT@15..16 "y"
  EOF@16..16 ""
