compiler/mesh-parser/tests/snapshots/parser_tests__fn_expr_body_negative_literal.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: source_and_debug(source)
---
SOURCE_FILE@0..14
  FN_DEF@0..14
    FN_KW@0..2 "fn"
    WHITESPACE@2..3 " "
    NAME@3..6
      IDENT@3..6 "neg"
    PARAM_LIST@6..10
      L_PAREN@6..7 "("
      PARAM@7..9
        LITERAL_PAT@7..9
          MINUS@7..8 "-"
          INT_LITERAL@8..9 "1"
      R_PAREN@9..10 ")"
    WHITESPACE@10..11 " "
    EQ@11..12 "="
    WHITESPACE@12..13 " "
    FN_EXPR_BODY@13..14
      LITERAL@13..14
        INT_LITERAL@13..14 "1"
  EOF@14..14 ""
